[package]
name = "s71358173"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
# rocket_contrib = "0.4.10"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars", "tera"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
