[package]
name = "s71875180"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# rand_core = "0.6.3"
# crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
crossbeam-utils = "0.8.8"
threadpool = "1.8.1"
