[package]
name = "s73333943"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
plotly = "0.6.0"
# plotly = { version = ">=0.6.0", features = ["plotly_ndarray"] }
ndarray = "0.15.6"
serde = "1.0.143"
